--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,10 +2,21 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  
 }
 
+#__next {
+  width: 100%;
+}
+
+body {
+  display: flex;
+  height: 100%;
+  width: 100% !important;
+  text-align: center;
+  color: #fff;
+  background-color: #222529;
+}
 a {
   color: inherit;
   text-decoration: none;
@@ -13,4 +24,113 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+
+
+nav {
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  background-color: black;
+}
+
+nav a {
+  margin-left: 12px;
+}
+
+nav .logo {
+  margin-right: auto;
+  padding-left: 1rem;
+}
+
+.info-content {
+  padding-bottom: 2.5rem;
+}
+
+.gallery-cta-btn {
+  background: #000;
+  padding: 1rem;
+  border-radius: 10px;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
+footer {
+  display: block;
+  text-align: center;
+  padding: 30px 0;
+  margin-top: 60px;
+  color: #777;
+  background-color: black;
+}
+
+footer div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+footer div p {
+  margin-right: 1rem;
+  margin-left: 1rem;
+  text-align: center;
+}
+
+.fab {
+  font-size: 2rem;
+}
+
+.info-content {
+  text-align: center;
+  justify-content: center;
+  display: flex;
+  align-items: center;
+}
+
+.info-content p {
+      width: 55%;
+}
+
+@media screen and (max-width: 450px) { 
+  .info-content p {
+    width: auto;
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+}
+
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 4px;
+}
+
+/* Create four equal columns that sits next to each other */
+.column {
+  flex: 25%;
+  max-width: 25%;
+  padding: 0 4px;
+}
+
+.column img {
+  margin-top: 8px;
+  vertical-align: middle;
+  width: 100%;
+}
+
+/* Responsive layout - makes a two column-layout instead of four columns */
+@media screen and (max-width: 800px) {
+  .column {
+    flex: 50%;
+    max-width: 50%;
+  }
+}
+
+/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .column {
+    flex: 100%;
+    max-width: 100%;
+  }
 }
