--- a/styles/globals.css
+++ b/styles/globals.css
@@ -81,6 +81,10 @@ footer div p {
   font-size: 2rem;
 }
 
+.page-title {
+  margin-top: 2rem;
+}
+
 .info-content {
   text-align: center;
   justify-content: center;
