--- a/styles/Hero.module.css
+++ b/styles/Hero.module.css
@@ -2,10 +2,10 @@
     
 }
 
-.bgImg {
+/* .bgImg {
     z-index: 1;
     width: 100%;
     height: auto;
     background-position: center;
     background-size: cover;
-}
+} */
